Closed Bug 1609167 Opened 4 years ago Closed 4 years ago

MinGW32 build fails after bug 981248 with some obscure linker error.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox74 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

No description provided.

As it seems it causes MinGW 32-bit-only build issues.

[task 2020-01-14T15:28:31.617Z] 15:28:31     INFO -  make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/toolkit/library/gtest'
[task 2020-01-14T15:28:31.617Z] 15:28:31     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/i686-w64-mingw32-clang++ -std=gnu++17 -shared -Wl,--out-implib -Wl,libxul.a -Wl,-pdb,xul.pdb -o xul.dll @/builds/worker/workspace/build/src/obj-firefox/toolkit/library/gtest/xul_dll.list ./module.res  -Wl,--large-address-aware -Wl,--icf=safe -lssp -fstack-protector-strong -Wl,--dynamicbase -Wl,-Xlink=-DELAYLOAD:comdlg32.dll -Wl,-Xlink=-DELAYLOAD:credui.dll -Wl,-Xlink=-DELAYLOAD:hid.dll -Wl,-Xlink=-DELAYLOAD:msimg32.dll -Wl,-Xlink=-DELAYLOAD:netapi32.dll -Wl,-Xlink=-DELAYLOAD:secur32.dll -Wl,-Xlink=-DELAYLOAD:urlmon.dll -Wl,-Xlink=-DELAYLOAD:wininet.dll -Wl,-Xlink=-DELAYLOAD:winspool.drv -Wl,-Xlink=-DELAYLOAD:oleacc.dll -Wl,-Xlink=-DELAYLOAD:api-ms-win-core-winrt-l1-1-0.dll -Wl,-Xlink=-DELAYLOAD:api-ms-win-core-winrt-string-l1-1-0.dll   ../../../security/nss/lib/crmf/crmf_crmf/libcrmf.a ../../../js/src/build/libjs_static.a /builds/worker/workspace/build/src/obj-firefox/i686-pc-windows-gnu/debug/gkrust_gtest.lib ../../../security/libnss3.a ../../../config/external/lgpllibs/liblgpllibs.a ../../../mozglue/build/libmozglue.a   -luuid -lusp10 -lgdi32 -lwinmm -lwsock32 -luserenv -lsecur32 -lavrt -lole32 -lshell32 -ldbghelp -lmpr -lhid -lrpcrt4 -lurlmon -lusp10 -lmsimg32 -lwinmm -lntdll -lcredui -lmfuuid -lwmcodecdspuuid -lstrmiids -lcrypt32 -lversion -lwinspool -lcomdlg32 -limm32 -lnetapi32 -lshlwapi -lws2_32 -ldwmapi -liphlpapi -luxtheme -lsetupapi -lsecur32 -lsensorsapi -lportabledeviceguids -lwininet -lwbemuuid -lwintrust -lwtsapi32 -llocationapi -lsapi -ldxguid -ldhcpcsvc -ld3dcompiler -loleacc -loleaut32 -ldelayimp
[task 2020-01-14T15:28:31.617Z] 15:28:31     INFO -  lld-link: error: undefined symbol: __ZThn100_N18nsTextControlFrame13GetTextEditorEv
[task 2020-01-14T15:28:31.617Z] 15:28:31     INFO -  >>> referenced by ../../../layout/forms/Unified_cpp_layout_forms0.o:(__ZTV20nsNumberControlFrame)
[task 2020-01-14T15:28:31.617Z] 15:28:31     INFO -  clang-9: error: linker command failed with exit code 1 (use -v to see invocation)
[task 2020-01-14T15:28:31.617Z] 15:28:31     INFO -  /builds/worker/workspace/build/src/config/rules.mk:616: recipe for target 'xul.dll' failed
Pushed by malexandru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/805e50a7dd6d
Don't use NS_IMETHOD for nsITextControlFrame::GetTextEditor. r=smaug
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: