Bug 1609167 - Don't use NS_IMETHOD for nsITextControlFrame::GetTextEditor. r=smaug

As it seems it causes MinGW 32-bit-only build issues.

Differential Revision: https://phabricator.services.mozilla.com/D59889